--- a/app/src/main/res/layout/dropdown_menu.xml
+++ b/app/src/main/res/layout/dropdown_menu.xml
@@ -1,6 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+<TextView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text=""
+    android:padding="14dp"
+    android:textColor="@color/black"
+    android:textSize="16sp"
+    android:id="@+id/dropdown_menu_text"/>
