--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -8,11 +8,11 @@
         <item
             android:id="@+id/nav_profile"
             android:icon="@drawable/ic_baseline_person_24"
-            android:title="Profile" />
+            android:title="@string/profile" />
         <item
             android:id="@+id/nav_diary"
             android:icon="@drawable/ic_baseline_menu_book_24"
-            android:title="Diary" />
+            android:title="@string/diary" />
 
         <item
             android:id="@+id/nav_calculator"
@@ -21,20 +21,17 @@
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_baseline_settings_24"
-            android:title="Settings" />
+            android:title="@string/about" />
 
     </group>
 
-    <item android:title="SomethingAgain">
+    <item android:title="">
         <menu>
-            <item
-                android:id="@+id/nav_something"
-                android:title="testing" />
 
             <item
                 android:id="@+id/log_out"
                 android:icon="@drawable/ic_baseline_login_24"
-                android:title="Log out" />
+                android:title="@string/log_out_drawer" />
 
 
         </menu>
