--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -14,10 +14,10 @@
         android:src="@mipmap/ic_launcher_round" />
 
     <TextView
+        android:id="@+id/username_here"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="8dp"
-        android:text="Username here"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
