--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -11,16 +11,16 @@
             android:title="@string/profile" />
         <item
             android:id="@+id/nav_diary"
-            android:icon="@drawable/ic_baseline_menu_book_24"
-            android:title="@string/diary" />
+            android:icon="@drawable/ic_baseline_home_24"
+            android:title="@string/home" />
 
         <item
             android:id="@+id/nav_calculator"
-            android:icon="@drawable/ic_baseline_calculate_24"
-            android:title="Calculator" />
+            android:icon="@drawable/ic_baseline_menu_book_24"
+            android:title="@string/diary" />
         <item
             android:id="@+id/nav_settings"
-            android:icon="@drawable/ic_baseline_settings_24"
+            android:icon="@drawable/ic_baseline_info_24"
             android:title="@string/about" />
 
     </group>
