--- a/app/src/main/res/layout-sw600dp/fragment_diary.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_diary.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent" >
 
     <com.github.mikephil.charting.charts.PieChart
         android:id="@+id/pieChart"
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/diary_caps_text"
-            android:textSize="@dimen/text_calories" />
+            android:textSize="@dimen/tablet_text_calories" />
 
         <TextView
             android:id="@+id/caloriesToday"
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="cals"
-            android:textSize="@dimen/calories_today" />
+            android:textSize="@dimen/tablet_calories_today" />
 
     </LinearLayout>
 
