--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="calories_today">20sp</dimen>
+    <dimen name="text_calories">18sp</dimen>
+    <dimen name="tablet_calories_today">40sp</dimen>
+    <dimen name="tablet_text_calories">37sp</dimen>
 </resources>
